fix: add istio-cni and enable Ambient mode profile
- Add istio-cni HelmRelease (required for Ambient mode)
- Set profile=ambient for istiod and ztunnel components
- Update component health checks to include istio-cni-node DaemonSet
- Follow official Istio Ambient installation requirements

This should resolve the ztunnel template evaluation errors.

--- a/software/components/istio/component.yaml
+++ b/software/components/istio/component.yaml
@@ -53,6 +53,10 @@ spec:
   healthChecks:
     - apiVersion: apps/v1
       kind: DaemonSet
+      name: istio-cni-node
+      namespace: istio-system
+    - apiVersion: apps/v1
+      kind: DaemonSet
       name: ztunnel
       namespace: istio-system
 
