--- a/software/components/istio/ambient/release-cni.yaml
+++ b/software/components/istio/ambient/release-cni.yaml
@@ -1,18 +1,18 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: ztunnel
+  name: istio-cni
   namespace: flux-system
 spec:
   targetNamespace: istio-system
-  releaseName: ztunnel
+  releaseName: istio-cni
   dependsOn:
     - name: istiod
       namespace: flux-system
   chart:
     spec:
-      chart: ztunnel
-      version: ">=1.24.0 <2.0.0"  # Auto-update minor versions
+      chart: cni
+      version: ">=1.24.0 <2.0.0"
       sourceRef:
         kind: HelmRepository
         name: istio
@@ -28,22 +28,16 @@ spec:
     # Enable Ambient mode profile
     profile: ambient
 
-    # Variant for development/testing
-    variant: distroless
-
     # Resources optimized for local development
-    resources:
-      requests:
-        cpu: 50m
-        memory: 64Mi
-      limits:
-        cpu: 200m
-        memory: 256Mi
+    cni:
+      resources:
+        requests:
+          cpu: 100m
+          memory: 128Mi
+        limits:
+          cpu: 300m
+          memory: 256Mi
 
-    # Use default environment configuration
-
-    # Affinity rules for single-node Kind cluster
-    affinity: {}
-
-    # Termination grace period for clean shutdown
-    terminationGracePeriodSeconds: 30
+    # Platform-specific configuration for Kind
+    global:
+      platform: ""  # Kind doesn't need special platform setting
