--- a/software/components/istio/base/release-istiod.yaml
+++ b/software/components/istio/base/release-istiod.yaml
@@ -25,6 +25,9 @@ spec:
     remediation:
       retries: 3
   values:
+    # Enable Ambient mode profile
+    profile: ambient
+
     pilot:
       env:
         # Enable Gateway API support
