feat: add HostK8s labels and Ingress for status detection
- Add global HostK8s labels to bookinfo HelmRelease
- Include hostk8s.application label for status script detection
- Add traditional Ingress resource alongside HTTPRoutes
- Configure Ingress to use 'istio' class for Gateway API backend

This enables 'make status' to properly detect and display the
bookinfo application with ingress information.

--- a/software/stacks/book-app/manifests/kustomization.yaml
+++ b/software/stacks/book-app/manifests/kustomization.yaml
@@ -6,9 +6,11 @@ resources:
   - source.yaml
   - release.yaml
   - httproutes.yaml
+  - ingress.yaml
   # waypoint.yaml.optional is not included by default
   # Apply it separately when L7 features are needed
 
 commonLabels:
   hostk8s.stack: book-app
   hostk8s.app: bookinfo
+  hostk8s.application: bookinfo
