fix: add NodePort annotation for Ambient mode
Per Istio Ambient mode documentation, Gateway services should be
configured as NodePort for proper operation in local environments.
Add networking.istio.io/service-type annotation to enforce this.

--- a/software/components/istio/gateway/gateway.yaml
+++ b/software/components/istio/gateway/gateway.yaml
@@ -12,6 +12,8 @@ metadata:
     # - Service: hostk8s-gateway-istio
     # - Deployment: hostk8s-gateway-istio
     hostk8s.io/description: "Main ingress gateway for HostK8s platform"
+    # Ensure NodePort for Kind cluster compatibility (Ambient mode requirement)
+    networking.istio.io/service-type: NodePort
 spec:
   gatewayClassName: istio
 
