refactor: replace complex Istio architecture with simplified version
- Remove old complex istio component (18 files, 3 Flux Kustomizations)
- Replace with simplified istio component (8 files, 1 Flux Kustomization)
- Remove old book-app stack with Helm chart approach
- Replace with official Istio YAML manifests + clean structure
- Enhanced status detection for Gateway API ingress class
- Auto-patching job for reliable NodePort configuration

Benefits delivered:
- 56% fewer files (8 vs 18)
- Single Flux Kustomization vs nested dependencies
- Auto-solving configuration vs manual workarounds
- Follows postgres/redis patterns consistently
- Identical functionality with better maintainability

--- a/software/stacks/book-app/app/kustomization.yaml
+++ b/software/stacks/book-app/app/kustomization.yaml
@@ -10,7 +10,7 @@ resources:
 
 labels:
   - pairs:
-      hostk8s.stack: book-app-simple
+      hostk8s.stack: book-app
       hostk8s.app: bookinfo
 
 # Only productpage gets application label for clean status detection
