--- a/software/components/istio/kustomization.yaml
+++ b/software/components/istio/kustomization.yaml
@@ -2,7 +2,14 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - component.yaml
+  - namespace.yaml
+  - sources.yaml
+  - control-plane.yaml
+  - ambient-dataplane.yaml
+  - gateway.yaml
+  - certificate.yaml
 
-commonLabels:
-  hostk8s.component: istio
+labels:
+  - pairs:
+      hostk8s.component: istio
+      component.hostk8s.io/role: mesh
