--- a/infra/kubernetes/kind-custom.yaml
+++ b/infra/kubernetes/kind-custom.yaml
@@ -38,6 +38,14 @@ nodes:
       - containerPort: 30443
         hostPort: 8443
         protocol: TCP
+      # Gateway API (Istio) ports
+      - containerPort: 30081
+        hostPort: 8081
+        protocol: TCP
+      - containerPort: 30444
+        hostPort: 8444
+        protocol: TCP
+      # Registry ports
       - containerPort: 30500
         hostPort: 5001
         protocol: TCP
