feat: implement HTTPS-only security for book-app
- Add HTTP to HTTPS redirect for all bookinfo traffic
- Create separate HTTPS-only HTTPRoute targeting https listener
- Configure Gateway API to enforce TLS encryption
- Update kind-custom.yaml with Gateway API port mappings (30081→8081, 30444→8444)

Security Enhancement:
- Demonstrates full cert-manager + Istio mTLS security stack
- HTTP requests automatically redirect to HTTPS (301)
- All bookinfo traffic encrypted end-to-end
- APIs accessible only via TLS: https://localhost:8444/

This showcases proper service mesh security patterns:
- External traffic: TLS termination at Gateway
- Internal traffic: mTLS via Ambient mode between services

--- a/software/stacks/book-app/app/httproutes.yaml
+++ b/software/stacks/book-app/app/httproutes.yaml
@@ -21,6 +21,35 @@ spec:
   - "localhost"
   - "bookinfo.hostk8s.local"
   rules:
+  # HTTP to HTTPS redirect for security
+  - matches:
+    - path:
+        type: PathPrefix
+        value: /
+    filters:
+    - type: RequestRedirect
+      requestRedirect:
+        scheme: https
+        statusCode: 301
+---
+# HTTPS-only routes for security (matches parentRef to HTTPS listener)
+apiVersion: gateway.networking.k8s.io/v1
+kind: HTTPRoute
+metadata:
+  name: bookinfo-https
+  namespace: bookinfo
+  labels:
+    hostk8s.app: bookinfo
+    hostk8s.application: bookinfo
+spec:
+  parentRefs:
+  - name: hostk8s-gateway
+    namespace: istio-system
+    sectionName: https  # Target HTTPS listener specifically
+  hostnames:
+  - "localhost"
+  - "bookinfo.hostk8s.local"
+  rules:
   # Root path redirects to productpage
   - matches:
     - path:
