fix: add static asset routing for HTTPS bookinfo
- Add /static path prefix route to HTTPS HTTPRoute
- Ensure CSS, JS, and image assets load properly via Gateway API
- Route static content requests to productpage service
- Maintain HTTPS-only security while enabling proper UI styling

This fixes the unstyled HTML display issue when accessing
the bookinfo application via HTTPS by ensuring all static
assets are properly routed through the Gateway.

--- a/software/stacks/book-app/app/httproutes.yaml
+++ b/software/stacks/book-app/app/httproutes.yaml
@@ -62,6 +62,14 @@ spec:
           type: ReplaceFullPath
           replaceFullPath: /productpage
         statusCode: 301
+  # Static assets (CSS, JS, images)
+  - matches:
+    - path:
+        type: PathPrefix
+        value: /static
+    backendRefs:
+    - name: productpage
+      port: 9080
   # Main productpage interface
   - matches:
     - path:
