fix: correct HTTPRoute rule ordering for proper static asset loading
- Reorder HTTPRoute rules: specific paths before catch-all
- Serve productpage from root '/' as originally designed
- Place static assets route first, then APIs, then catch-all
- Remove redirect from '/' to '/productpage' (causes path confusion)

This fixes the CSS/styling issues by ensuring:
- Static assets load from correct relative paths
- API endpoints route to proper services
- No path resolution confusion with relative URLs
- Follows original bookinfo application design

HTTPRoute rule order now:
1. /static/* → productpage (static assets)
2. /details, /reviews, /ratings → respective services
3. /* → productpage (catch-all for main page)

--- a/software/stacks/book-app/app/httproutes.yaml
+++ b/software/stacks/book-app/app/httproutes.yaml
@@ -50,19 +50,7 @@ spec:
   - "localhost"
   - "bookinfo.hostk8s.local"
   rules:
-  # Root path redirects to productpage
-  - matches:
-    - path:
-        type: Exact
-        value: /
-    filters:
-    - type: RequestRedirect
-      requestRedirect:
-        path:
-          type: ReplaceFullPath
-          replaceFullPath: /productpage
-        statusCode: 301
-  # Static assets (CSS, JS, images)
+  # Static assets (CSS, JS, images) - most specific first
   - matches:
     - path:
         type: PathPrefix
@@ -70,15 +58,7 @@ spec:
     backendRefs:
     - name: productpage
       port: 9080
-  # Main productpage interface
-  - matches:
-    - path:
-        type: PathPrefix
-        value: /productpage
-    backendRefs:
-    - name: productpage
-      port: 9080
-  # API endpoints for testing
+  # API endpoints - specific paths before catch-all
   - matches:
     - path:
         type: PathPrefix
@@ -105,6 +85,14 @@ spec:
     - path:
         type: Exact
         value: /health
+    backendRefs:
+    - name: productpage
+      port: 9080
+  # Productpage interface from root - catch-all LAST
+  - matches:
+    - path:
+        type: PathPrefix
+        value: /
     backendRefs:
     - name: productpage
       port: 9080
