fix: target HTTP listener specifically for redirect to prevent loop
- Add sectionName: http to bookinfo HTTPRoute
- Prevents redirect from applying to HTTPS traffic
- Fixes redirect loop where HTTPS requests were being redirected
- Ensures clean separation: HTTP→HTTPS redirect, HTTPS→content

Now works correctly:
- HTTP: http://localhost:8081/ → 301 redirect to HTTPS
- HTTPS: https://localhost:8444/ → actual bookinfo content
- Static assets and APIs all accessible via HTTPS

--- a/software/stacks/book-app/app/httproutes.yaml
+++ b/software/stacks/book-app/app/httproutes.yaml
@@ -17,6 +17,7 @@ spec:
   parentRefs:
   - name: hostk8s-gateway
     namespace: istio-system
+    sectionName: http  # Target only HTTP listener for redirect
   hostnames:
   - "localhost"
   - "bookinfo.hostk8s.local"
