--- a/software/stacks/book-app/app/httproutes.yaml
+++ b/software/stacks/book-app/app/httproutes.yaml
@@ -17,41 +17,23 @@ spec:
   parentRefs:
   - name: hostk8s-gateway
     namespace: istio-system
-    sectionName: http  # Target only HTTP listener for redirect
   hostnames:
   - "localhost"
   - "bookinfo.hostk8s.local"
   rules:
-  # HTTP to HTTPS redirect for security
+  # Root path redirects to productpage
   - matches:
     - path:
-        type: PathPrefix
+        type: Exact
         value: /
     filters:
     - type: RequestRedirect
       requestRedirect:
-        scheme: https
+        path:
+          type: ReplaceFullPath
+          replaceFullPath: /productpage
         statusCode: 301
----
-# HTTPS-only routes for security (matches parentRef to HTTPS listener)
-apiVersion: gateway.networking.k8s.io/v1
-kind: HTTPRoute
-metadata:
-  name: bookinfo-https
-  namespace: bookinfo
-  labels:
-    hostk8s.app: bookinfo
-    hostk8s.application: bookinfo
-spec:
-  parentRefs:
-  - name: hostk8s-gateway
-    namespace: istio-system
-    sectionName: https  # Target HTTPS listener specifically
-  hostnames:
-  - "localhost"
-  - "bookinfo.hostk8s.local"
-  rules:
-  # Static assets (CSS, JS, images) - most specific first
+  # Static assets (CSS, JS, images)
   - matches:
     - path:
         type: PathPrefix
@@ -59,7 +41,15 @@ spec:
     backendRefs:
     - name: productpage
       port: 9080
-  # API endpoints - specific paths before catch-all
+  # Main productpage interface
+  - matches:
+    - path:
+        type: PathPrefix
+        value: /productpage
+    backendRefs:
+    - name: productpage
+      port: 9080
+  # API endpoints for testing
   - matches:
     - path:
         type: PathPrefix
@@ -86,14 +76,6 @@ spec:
     - path:
         type: Exact
         value: /health
-    backendRefs:
-    - name: productpage
-      port: 9080
-  # Productpage interface from root - catch-all LAST
-  - matches:
-    - path:
-        type: PathPrefix
-        value: /
     backendRefs:
     - name: productpage
       port: 9080
