feat: make Gateway API CRDs foundational cluster infrastructure
- Add setup-gateway-api.py to install CRDs during cluster creation
- Download Gateway API v1.3.0 CRDs directly from upstream (avoids large files)
- Install Gateway API before all other addons as foundational infrastructure
- Remove Gateway API installation from Istio component (cleaner separation)
- No environment variable needed - always available like metrics-server

Architecture Decision:
- Gateway API CRDs are foundational Kubernetes infrastructure
- Available to any implementation (Istio, NGINX Gateway, etc.)
- Follows Gateway API documentation guidance for cluster-admin management
- Eliminates component timing dependency issues
- Makes Gateway API a first-class HostK8s capability

This treats Gateway API like CoreDNS or kube-proxy - always there,
enabling modern ingress patterns without configuration complexity.

--- a/software/components/istio/sources.yaml
+++ b/software/components/istio/sources.yaml
@@ -14,34 +14,5 @@ spec:
   interval: 10m
   url: https://istio-release.storage.googleapis.com/charts
 
----
-# Gateway API CRDs from Kubernetes SIG
-apiVersion: source.toolkit.fluxcd.io/v1
-kind: GitRepository
-metadata:
-  name: gateway-api
-  namespace: flux-system
-spec:
-  interval: 10m
-  url: https://github.com/kubernetes-sigs/gateway-api
-  ref:
-    tag: v1.2.0
-
----
-# Gateway API CRDs installation
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: gateway-api-crds
-  namespace: flux-system
-  labels:
-    hostk8s.component: istio
-spec:
-  interval: 10m
-  sourceRef:
-    kind: GitRepository
-    name: gateway-api
-  path: ./config/crd/standard
-  prune: false  # Never prune CRDs
-  wait: true
-  timeout: 2m
+# Gateway API CRDs are now installed as foundational cluster infrastructure
+# See infra/scripts/setup-gateway-api.py and infra/manifests/gateway-api.yaml
