--- a/software/components/elasticsearch/kibana/ingress.yaml
+++ b/software/components/elasticsearch/kibana/ingress.yaml
@@ -3,6 +3,8 @@ kind: Ingress
 metadata:
   name: kibana
   namespace: elasticsearch
+  labels:
+    hostk8s.app: kibana
   annotations:
     nginx.ingress.kubernetes.io/proxy-body-size: "10m"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
