feat: add status beacon deployments for Elasticsearch visibility
- Add minimal status beacon deployments with hostk8s.app labels
- These deployments allow make status to detect Elasticsearch components
- Enable proper display of ingress endpoints in status output
- Use minimal resource footprint (1m CPU, 1Mi memory)

--- a/software/components/elasticsearch/cluster/kustomization.yaml
+++ b/software/components/elasticsearch/cluster/kustomization.yaml
@@ -5,7 +5,9 @@ resources:
   - namespace.yaml
   - external-secret.yaml
   - elasticsearch.yaml
+  - status-beacon.yaml
 
 commonLabels:
   hostk8s.component: elasticsearch
   component.hostk8s.io/role: cluster
+  hostk8s.app: elasticsearch
