--- a/software/components/elasticsearch/kibana/kustomization.yaml
+++ b/software/components/elasticsearch/kibana/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 resources:
   - kibana.yaml
   - ingress.yaml
+  - status-beacon.yaml
 
 commonLabels:
   hostk8s.component: elasticsearch
