--- a/software/components/elasticsearch/cluster/status-beacon.yaml
+++ b/software/components/elasticsearch/cluster/status-beacon.yaml
@@ -18,8 +18,7 @@ spec:
     spec:
       containers:
         - name: status
-          image: busybox:1.36
-          command: ['sleep', 'infinity']
+          image: registry.k8s.io/pause:3.9
           resources:
             requests:
               cpu: 1m
