feat: implement proper ECK label propagation approach
- Update ECK operator to version 2.15.0 (supports ECK 3.1.0+ features)
- Update Elasticsearch to version 9.0.7
- Update Kibana to version 9.1.3
- Add hostk8s.app labels and eck.k8s.alpha.elastic.co/propagate-labels annotations
- Remove status beacon deployments in favor of native ECK label propagation
- Labels now propagate to actual StatefulSets, Deployments, and Services

--- a/software/components/elasticsearch/cluster/elasticsearch.yaml
+++ b/software/components/elasticsearch/cluster/elasticsearch.yaml
@@ -3,8 +3,12 @@ kind: Elasticsearch
 metadata:
   name: elasticsearch
   namespace: elasticsearch
+  labels:
+    hostk8s.app: elasticsearch
+  annotations:
+    eck.k8s.alpha.elastic.co/propagate-labels: "hostk8s.app"
 spec:
-  version: 8.15.2
+  version: 9.0.7
 
   # Disable TLS for local development
   http:
