feat: use Vault password for ECK built-in elastic user
- Create ExternalSecret that puts Vault password into ECK-expected secret format
- Use elasticsearch-es-elastic-user secret with Vault-sourced elastic-password
- Remove fileRealm configuration in favor of built-in user override
- This makes Vault the source of truth for login credentials

--- a/software/components/elasticsearch/cluster/elasticsearch.yaml
+++ b/software/components/elasticsearch/cluster/elasticsearch.yaml
@@ -19,10 +19,7 @@ spec:
       spec:
         type: ClusterIP
 
-  # Auth configuration - use external secret
-  auth:
-    fileRealm:
-      - secretName: elasticsearch-credentials
+  # Auth configuration - ECK will use elasticsearch-es-elastic-user secret from Vault
 
   nodeSets:
     - name: default
