--- a/software/components/elasticsearch/cluster/kustomization.yaml
+++ b/software/components/elasticsearch/cluster/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 resources:
   - namespace.yaml
   - external-secret.yaml
+  - elastic-user-vault-secret.yaml
   - elasticsearch.yaml
 
 commonLabels:
