feat: add Elasticsearch ingress for external access
- Add ingress at elasticsearch.localhost for direct API access from IDEs
- Configure appropriate proxy settings for Elasticsearch HTTP API
- Enables external access to Elasticsearch REST API on port 9200

--- a/software/components/elasticsearch/cluster/kustomization.yaml
+++ b/software/components/elasticsearch/cluster/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   - external-secret.yaml
   - elastic-user-vault-secret.yaml
   - elasticsearch.yaml
+  - elasticsearch-ingress.yaml
 
 commonLabels:
   hostk8s.component: elasticsearch
