fix: correct ExternalSecret creationPolicy for elasticsearch-es-elastic-user
- Change creationPolicy from invalid 'Replace' to 'Owner'
- Will need to delete existing ECK secret first for this to take effect

--- a/software/components/elasticsearch/cluster/elastic-user-vault-secret.yaml
+++ b/software/components/elasticsearch/cluster/elastic-user-vault-secret.yaml
@@ -10,7 +10,7 @@ spec:
     kind: ClusterSecretStore
   target:
     name: elasticsearch-es-elastic-user
-    creationPolicy: Replace  # Replace ECK's auto-generated secret
+    creationPolicy: Owner  # Create and manage the secret
     template:
       metadata:
         labels:
