--- a/software/components/elasticsearch/kibana/kibana.yaml
+++ b/software/components/elasticsearch/kibana/kibana.yaml
@@ -26,6 +26,9 @@ spec:
 
   # Pod configuration
   podTemplate:
+    metadata:
+      labels:
+        hostk8s.app: kibana
     spec:
       containers:
         - name: kibana
