--- a/software/components/elasticsearch/cluster/elasticsearch-ingress.yaml
+++ b/software/components/elasticsearch/cluster/elasticsearch-ingress.yaml
@@ -3,6 +3,8 @@ kind: Ingress
 metadata:
   name: elasticsearch
   namespace: elasticsearch
+  labels:
+    hostk8s.app: elasticsearch
   annotations:
     nginx.ingress.kubernetes.io/proxy-body-size: "100m"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
