--- a/software/components/elasticsearch/operator/release.yaml
+++ b/software/components/elasticsearch/operator/release.yaml
@@ -10,7 +10,7 @@ spec:
   chart:
     spec:
       chart: eck-operator
-      version: "2.15.0"  # ECK operator version 2.15.0 (contains ECK 3.1.0)
+      version: "3.1.0"  # ECK operator version 3.1.0 (includes label propagation to StatefulSets/Deployments)
       sourceRef:
         kind: HelmRepository
         name: elastic
