fix: correct labels syntax in elasticsearch kustomization
- Change 'labels:' to 'commonLabels:' in kustomization.yaml
- Fixes Flux JSON unmarshaling error

--- a/software/components/elasticsearch/kustomization.yaml
+++ b/software/components/elasticsearch/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 resources:
   - component.yaml
 
-labels:
+commonLabels:
   hostk8s.component: elasticsearch
   component.hostk8s.io/type: foundation
   component.hostk8s.io/category: database
