--- a/software/components/postgres/kustomization.yaml
+++ b/software/components/postgres/kustomization.yaml
@@ -11,4 +11,5 @@ resources:
 
 commonLabels:
   hostk8s.component: postgres
-  component.hostk8s.io/role: operator
+  component.hostk8s.io/type: foundation
+  component.hostk8s.io/category: database
