fix: support nested stack paths in storage management
- Update manage-storage.py to handle foundation/elastic style paths
- Replace / with - in PV names and labels for Kubernetes compatibility
- Update storage and secrets contracts to use foundation/elastic naming

--- a/software/stacks/foundation/elastic/hostk8s.storage.yaml
+++ b/software/stacks/foundation/elastic/hostk8s.storage.yaml
@@ -1,7 +1,7 @@
 apiVersion: hostk8s.io/v1
 kind: StorageContract
 metadata:
-  name: elastic
+  name: foundation/elastic
   namespace: elasticsearch
 spec:
   directories:
