--- a/software/stacks/foundation/elastic/hostk8s.secrets.yaml
+++ b/software/stacks/foundation/elastic/hostk8s.secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: hostk8s.io/v1
 kind: SecretContract
 metadata:
-  name: elastic
+  name: foundation/elastic
   namespace: elasticsearch
 spec:
   secrets:
