--- a/software/components/redis/kustomization.yaml
+++ b/software/components/redis/kustomization.yaml
@@ -14,7 +14,5 @@ resources:
   - ingress.yaml
   - external-secret.yaml
 
-commonLabels:
-  hostk8s.component: redis
-  component.hostk8s.io/type: foundation
-  component.hostk8s.io/category: database
+# Note: commonLabels removed - they conflict with HelmRelease label management
+# Labels should be managed directly in the HelmRelease values
