--- a/software/components/redis/release.yaml
+++ b/software/components/redis/release.yaml
@@ -13,6 +13,13 @@ spec:
     name: redis-bitnami
     namespace: flux-system
   values:
+    # Override image to use official Redis instead of Bitnami
+    image:
+      registry: docker.io
+      repository: redis
+      tag: "7.2-alpine"
+      pullPolicy: IfNotPresent
+
     # Architecture - simple replication for development
     architecture: standalone
 
