fix: simplify Redis image override to official redis:7-alpine
- Use docker.io/redis:7-alpine directly
- Disable metrics to avoid Bitnami exporter issues
- Resolves ImagePullBackOff errors with unavailable Bitnami images

--- a/software/components/redis/release.yaml
+++ b/software/components/redis/release.yaml
@@ -13,12 +13,16 @@ spec:
     name: redis-bitnami
     namespace: flux-system
   values:
-    # Override image to use official Redis instead of Bitnami
+    # Override image to use official Redis (Bitnami images currently unavailable)
     image:
       registry: docker.io
       repository: redis
-      tag: "7.2-alpine"
+      tag: "7-alpine"
       pullPolicy: IfNotPresent
+
+    # Disable metrics to avoid Bitnami exporter image issues
+    metrics:
+      enabled: false
 
     # Architecture - simple replication for development
     architecture: standalone
