fix: replace Bitnami Helm charts with direct deployments
- Bitnami Docker images are currently unavailable (registry migration)
- Replace HelmRelease with simple Deployment for Redis
- Add direct Redis Commander deployment
- Uses official redis:7-alpine image
- Maintains same service names for compatibility

--- a/software/components/redis/kustomization.yaml
+++ b/software/components/redis/kustomization.yaml
@@ -9,8 +9,10 @@ metadata:
 
 resources:
   - namespace.yaml
-  - source.yaml
-  - release.yaml
+  - redis-deployment.yaml     # Using direct deployment instead of Helm due to Bitnami image issues
+  - redis-commander.yaml      # Simple deployment for Redis Commander UI
+  # - source.yaml             # Disabled: Bitnami chart sources
+  # - release.yaml            # Disabled: HelmRelease with image issues
   - ingress.yaml
   - external-secret.yaml
 
