fix: remove conflicting commonLabels and update ingress config
- Remove commonLabels from kustomization.yaml to prevent HelmRelease conflicts
- Replace configuration-snippet with supported nginx annotations
- Fixes admission webhook validation errors

--- a/software/components/postgres/kustomization.yaml
+++ b/software/components/postgres/kustomization.yaml
@@ -9,7 +9,5 @@ resources:
   - pgadmin-service.yaml
   - pgadmin-ingress.yaml
 
-commonLabels:
-  hostk8s.component: postgres
-  component.hostk8s.io/type: foundation
-  component.hostk8s.io/category: database
+# Note: commonLabels removed - they conflict with HelmRelease label management
+# Labels should be managed directly in resources
