--- a/software/components/redis/source.yaml
+++ b/software/components/redis/source.yaml
@@ -9,7 +9,7 @@ spec:
   interval: 5m
   url: oci://registry-1.docker.io/bitnamicharts/redis
   ref:
-    semver: ">=20.0.0 <21.0.0"
+    tag: "20.5.0"
 ---
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
