fix: use semver range for Redis chart to get latest available
Using semver range >=19.0.0 to automatically get the latest available
Redis chart from the OCI registry. Direct tags may not be available
in the OCI registry even if they exist on GitHub.

--- a/software/components/redis/source.yaml
+++ b/software/components/redis/source.yaml
@@ -9,7 +9,7 @@ spec:
   interval: 5m
   url: oci://registry-1.docker.io/bitnamicharts/redis
   ref:
-    tag: "23.0.2"
+    semver: ">=19.0.0"
 ---
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
