fix: use Bitnami Secure Images for Redis deployment
Override Redis images to use the new Bitnami Secure Images repository
(bitnamisecure) instead of the deprecated docker.io/bitnami repository.
This ensures continued support and updates for the Redis images.

Reference: https://github.com/bitnami/charts/issues/35164

--- a/software/components/redis/release.yaml
+++ b/software/components/redis/release.yaml
@@ -13,6 +13,17 @@ spec:
     name: redis-bitnami
     namespace: flux-system
   values:
+    # Override image to use Bitnami Secure Images due to Bitnami migration
+    # See: https://github.com/bitnami/charts/issues/35164
+    image:
+      repository: bitnamisecure/redis
+      tag: latest
+
+    sentinel:
+      image:
+        repository: bitnamisecure/redis-sentinel
+        tag: latest
+
     # Architecture - simple replication for development
     architecture: standalone
 
