fix: allow non-standard images for Bitnami Secure repository
Add global.security.allowInsecureImages flag to allow using images from
the bitnamisecure repository, which the chart considers non-standard.
This is required due to Bitnami's image migration.

Reference: https://github.com/bitnami/charts/issues/30850

--- a/software/components/redis/release.yaml
+++ b/software/components/redis/release.yaml
@@ -13,6 +13,11 @@ spec:
     name: redis-bitnami
     namespace: flux-system
   values:
+    # Allow non-standard images for Bitnami Secure Images
+    global:
+      security:
+        allowInsecureImages: true
+
     # Override image to use Bitnami Secure Images due to Bitnami migration
     # See: https://github.com/bitnami/charts/issues/35164
     image:
