--- a/software/components/redis/source.yaml
+++ b/software/components/redis/source.yaml
@@ -8,6 +8,8 @@ metadata:
 spec:
   interval: 5m
   url: oci://registry-1.docker.io/bitnamicharts/redis
+  ref:
+    semver: ">=20.0.0 <23.0.0"
 ---
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
