--- a/software/components/istio/gateway.yaml
+++ b/software/components/istio/gateway.yaml
@@ -53,7 +53,7 @@ spec:
       restartPolicy: OnFailure
       containers:
       - name: patcher
-        image: bitnami/kubectl:latest
+        image: bitnami/kubectl:1.30
         command:
         - /bin/sh
         - -c
