fix: migrate kubectl image to bitnamisecure registry
- Change from bitnami/kubectl to bitnamisecure/kubectl:latest
- Follows same pattern as redis components for Bitnami migration
- Resolves ImagePullBackOff in gateway-nodeport-patcher job

--- a/software/components/istio/gateway.yaml
+++ b/software/components/istio/gateway.yaml
@@ -53,7 +53,7 @@ spec:
       restartPolicy: OnFailure
       containers:
       - name: patcher
-        image: bitnami/kubectl:1.30
+        image: bitnamisecure/kubectl:latest
         command:
         - /bin/sh
         - -c
