--- a/software/stacks/foundation/elastic/hostk8s.storage.yaml
+++ b/software/stacks/foundation/elastic/hostk8s.storage.yaml
@@ -1,7 +1,7 @@
 apiVersion: hostk8s.io/v1
 kind: StorageContract
 metadata:
-  name: foundation-elastic
+  name: foundation/elastic
   namespace: elasticsearch
 spec:
   directories:
