Add hostk8s.component labels to infrastructure deployments
- cert-manager: Add commonLabels.hostk8s.component=cert-manager to HelmRelease
- external-secrets: Add commonLabels.hostk8s.component=external-secrets to helm install

This ensures all infrastructure components appear in Component Services
section of make status output for complete operational visibility.

--- a/software/components/certs/manager/release.yaml
+++ b/software/components/certs/manager/release.yaml
@@ -21,6 +21,9 @@ spec:
   interval: 10m0s
   values:
     installCRDs: true
+    # Add HostK8s labels for component visibility
+    commonLabels:
+      hostk8s.component: cert-manager
     resources:
       limits:
         cpu: 100m
