Fix elastic component labeling for status visibility
- Change hostk8s.app to hostk8s.component for both elasticsearch and kibana
- Use component label "elastic" to group the entire Elastic Stack together
- This ensures both Elasticsearch and Kibana appear in Component Services

Fixes missing elastic stack components in make status output.

--- a/software/components/elasticsearch/kibana/kibana.yaml
+++ b/software/components/elasticsearch/kibana/kibana.yaml
@@ -4,9 +4,9 @@ metadata:
   name: kibana
   namespace: elasticsearch
   labels:
-    hostk8s.app: kibana
+    hostk8s.component: elastic
   annotations:
-    eck.k8s.alpha.elastic.co/propagate-labels: "hostk8s.app"
+    eck.k8s.alpha.elastic.co/propagate-labels: "hostk8s.component"
 spec:
   version: 9.1.3
   count: 1  # Single instance for development
@@ -28,7 +28,7 @@ spec:
   podTemplate:
     metadata:
       labels:
-        hostk8s.app: kibana
+        hostk8s.component: elastic
     spec:
       containers:
         - name: kibana
