--- a/software/components/elasticsearch/cluster/elasticsearch.yaml
+++ b/software/components/elasticsearch/cluster/elasticsearch.yaml
@@ -4,9 +4,9 @@ metadata:
   name: elasticsearch
   namespace: elasticsearch
   labels:
-    hostk8s.app: elasticsearch
+    hostk8s.component: elastic
   annotations:
-    eck.k8s.alpha.elastic.co/propagate-labels: "hostk8s.app"
+    eck.k8s.alpha.elastic.co/propagate-labels: "hostk8s.component"
 spec:
   version: 9.1.3
 
@@ -46,7 +46,7 @@ spec:
       podTemplate:
         metadata:
           labels:
-            hostk8s.app: elasticsearch
+            hostk8s.component: elastic
         spec:
           containers:
             - name: elasticsearch
